# aimer

./: .gitignore  README.md  pyproject.toml  setup.py
.aimer/: default_prompt.txt
.github/workflows/: python-package.yml
ghost_writer/: main.py  prompt_builder.py  test_prompt_builder.py
src/ghost_writer/: __init__.py  cli.py  main.py  prompts.py
src/ghost_writer/ai_providers/: __init__.py  anthropic.py  anthropic_function_definitions.txt  anthropic_tool_definitions.txt  base.py  open_ai.py
tests/: test_ai_providers.py  test_api_providers.py  test_cli.py  test_executor.py  test_prompt_builder.py  test_prompts.py
