[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aimer"
authors = [{name = "Keith Thompson", email = "keiththomps@hey.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
dependencies = [
  "anthropic >=0.19.0,<1",
  "click >=8.1.7,<9",
  "openai >=1.13.3,<2",
]

[project.urls]
Homepage = "https://github.com/keiththomps/aimer"
Source = "https://github.com/keiththomps/aimer"
Issues = "https://github.com/keiththomps/aimer/issues"

[project.scripts]
aimer = "aimer:cli.cli"

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "pylint"]
dist = ["twine", "build"]
